[package]
name = "misarch-order"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.16", features = ["bson", "chrono", "uuid", "log"] }
async-graphql-axum = "7.0.16"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.3", features = ["macros"] }
mongodb = { version = "2.8.2", features = ["tracing-unstable"] }
serde = "1.0.219"
futures = "0.3.31"
bson = { version = "2.14.0", features = ["chrono"]}
clap = { version = "4.5.37", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
mongodb-cursor-pagination = "0.3.2"
json = "0.12.4"
log = "0.4.27"
simple_logger = "5.0.0"
serde_json = "1.0.140"
graphql_client = "0.14.0"
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio"]}
opentelemetry-otlp = "0.32.0"
axum-otel-metrics = { version = "0.13.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.1"
tracing-opentelemetry = "0.33"
once_cell = "1.21.3"
tracing-futures = "0.2"